integrated category listing

--- a/apps/ForumComposite/Views/Category/All.cshtml
+++ b/apps/ForumComposite/Views/Category/All.cshtml
@@ -11,11 +11,18 @@
 <h1>Categories</h1>
 <hr />
 
-<div class="row">
-
+@{
+	var catCount = 0;
+}
+@foreach(var category in Categories)
+{
+	if(catCount % 3 == 0)
+	{
+		@:<div class="row">
+	}
+	
 	<div class="span5">
-		<h2><a href="@Url.RouteUrl("Category", new { categorySlug = "category-name" })">{Category
-					Name}</a></h2>
+		<h2><a href="@Url.RouteUrl("Category", new { categorySlug = category.Slug })">@category.Name</a></h2>
 		<p>A brief description of the category.</p>
 		@for (var i = 1; i < 5; i++)
 		{
@@ -24,79 +31,20 @@
 		<a href="#">View</a> 33 more posts.
 	</div>
 
-	<div class="span5">
-		<h2><a href="@Url.RouteUrl("Category", new { categorySlug = "category-name" })">{Category
-					Name}</a></h2>
-		<p>A brief description of the category.</p>
-		@for (var i = 1; i < 5; i++)
+
+		if (catCount % 3 == 2)
 		{
-			@RenderPage("~/Views/Shared/PostTile.cshtml", new { Size = "Medium", Mode = "Condensed" })
+			@:</div><hr/>
 		}
-		<a href="#">View</a> 33 more posts.
-	</div>
 
-	<div class="span5">
-		<h2><a href="@Url.RouteUrl("Category", new { categorySlug = "category-name" })">{Category
-					Name}</a></h2>
-		<p>A brief description of the category.</p>
-		@for (var i = 1; i < 5; i++)
-		{
-			@RenderPage("~/Views/Shared/PostTile.cshtml", new { Size = "Medium", Mode = "Condensed" })
-		}
-		<a href="#">View</a> 33 more posts.
-	</div>
 
-</div>
+	{
+		catCount++;
+	}
+}
 
-<hr>
 
-<div class="row">
 
-	<div class="span4" style="font-size: small;">
-		<h3><a href="@Url.RouteUrl("Category", new { categorySlug = "category-name" })">{Category
-					Name}</a></h3>
-		<p style="font-size: smaller;">A brief description of the category.</p>
-		@for (var i = 1; i < 3; i++)
-		{
-			@RenderPage("~/Views/Shared/PostTile.cshtml", new { Size = "Small", Mode = "Condensed" })
-		}
-		<a href="#">View</a> 33 more posts.
-	</div>
-
-	<div class="span4" style="font-size: small;">
-		<h3><a href="@Url.RouteUrl("Category", new { categorySlug = "category-name" })">{Category
-					Name}</a></h3>
-		<p style="font-size: smaller;">A brief description of the category.</p>
-		@for (var i = 1; i < 3; i++)
-		{
-			@RenderPage("~/Views/Shared/PostTile.cshtml", new { Size = "Small", Mode = "Condensed" })
-		}
-		<a href="#">View</a> 33 more posts.
-	</div>
-
-	<div class="span4" style="font-size: small;">
-		<h3><a href="@Url.RouteUrl("Category", new { categorySlug = "category-name" })">{Category
-					Name}</a></h3>
-		<p style="font-size: smaller;">A brief description of the category.</p>
-		@for (var i = 1; i < 3; i++)
-		{
-			@RenderPage("~/Views/Shared/PostTile.cshtml", new { Size = "Small", Mode = "Condensed" })
-		}
-		<a href="#">View</a> 33 more posts.
-	</div>
-
-	<div class="span4" style="font-size: small;">
-		<h3><a href="@Url.RouteUrl("Category", new { categorySlug = "category-name" })">{Category
-					Name}</a></h3>
-		<p style="font-size: smaller;">A brief description of the category.</p>
-		@for (var i = 1; i < 3; i++)
-		{
-			@RenderPage("~/Views/Shared/PostTile.cshtml", new { Size = "Small", Mode = "Condensed" })
-		}
-		<a href="#">View</a> 33 more posts.
-	</div>
-
-</div>
 
 <hr />
 
