--- a/apps/ForumComposite/Views/Shared/Layout/SideBar/Badge.cshtml
+++ b/apps/ForumComposite/Views/Shared/Layout/SideBar/Badge.cshtml
@@ -1,9 +1,19 @@
-﻿<div id="badge" class="row">
-	<div class="span1 badge-avatar">
-		<a href="@Url.RouteUrl("ProfileOverview", new { profileSlug = "my-profile-slug" })"><img src="https://secure.gravatar.com/avatar/4ff80c3ba10af1c3a5d86f293003cc99?s=50"/></a> 
+﻿
+@if (Request.IsAuthenticated)
+{
+	<div id="badge" class="row">
+		<div class="span1 badge-avatar">
+			<a href="@Url.RouteUrl("ProfileOverview", new { profileSlug = "my-profile-slug" })"><img src="https://secure.gravatar.com/avatar/4ff80c3ba10af1c3a5d86f293003cc99?s=50"/></a> 
+		</div>
+		<div class="span2 badge-labels">
+			<h3 class="badge-username"><a href="@Url.RouteUrl("ProfileOverview", new { profileSlug = "my-profile-slug" })">@CurrentUserName</a></h3>
+			<p class="badge-points">25 points</p>
+		</div>
 	</div>
-	<div class="span2 badge-labels">
-		<h3 class="badge-username"><a href="@Url.RouteUrl("ProfileOverview", new { profileSlug = "my-profile-slug" })">{Username}</a></h3>
-		<p class="badge-points">25 points</p>
+}
+else
+{
+	<div style="text-align: center;">
+		<button data-controls-modal="registration-modal" data-backdrop="static" class="btn medium primary">Register account</button>
 	</div>
-</div>
+}
