--- a/apps/ForumComposite/Views/Shared/Layout/TopBar.cshtml
+++ b/apps/ForumComposite/Views/Shared/Layout/TopBar.cshtml
@@ -1,4 +1,5 @@
-﻿<div class="topbar">
+﻿@using ForumComposite.Models
+<div class="topbar">
 	<div class="topbar-inner">
 		<div class="container-fluid">
 			<a class="brand" href="@Url.RouteUrl("Home")">@ForumName</a>
@@ -7,11 +8,7 @@
 				<li class="@ViewBag.TagsClass"><a href="@Url.RouteUrl("Tags")">Tags</a></li>
 				<li class="@ViewBag.InfoClass"><a href="@Url.RouteUrl("InfoPage")">Info</a></li>
 			</ul>
-			<form action="" class="pull-right">
-				<input class="input-small" type="text" placeholder="Username">
-				<input class="input-small" type="password" placeholder="Password">
-				<button class="btn primary" type="submit">Sign in</button> <button data-controls-modal="registration-modal" data-backdrop="static" class="btn small">Register account</button>
-			</form>
+			@{ Html.RenderPartial("Layout/SignIn", new SignInInputModel()); }
 		</div>
 	</div>
 </div>
