basic post publication including a fix to moderation

--- a/apps/ForumComposite/Views/Shared/Layout/SideBar.cshtml
+++ b/apps/ForumComposite/Views/Shared/Layout/SideBar.cshtml
@@ -1,8 +1,10 @@
-﻿<div class="sidebar">
+﻿@using ForumComposite.Models
+
+<div class="sidebar">
 	<div class="well">
 		@RenderPage("~/Views/Shared/Layout/SideBar/Badge.cshtml")       
 	</div>
-		@RenderPage("~/Views/Shared/Layout/SideBar/NewPost.cshtml")       
+	@Html.Partial("Layout/SideBar/NewPost", new PublishPostInputModel())
 	<div class="well">
 		@RenderPage("~/Views/Shared/Layout/SideBar/Categories.cshtml")       
 		<hr/>
