--- a/apps/ForumComposite/Views/Shared/Layout/SignIn.cshtml
+++ b/apps/ForumComposite/Views/Shared/Layout/SignIn.cshtml
@@ -1,5 +1,4 @@
-﻿@using Euclid.Composites.Mvc.Extensions
-@model ForumComposite.Models.SignInInputModel
+﻿@model ForumComposite.Models.SignInInputModel
 
 @if (!Request.IsAuthenticated)
 {
