--- a/apps/ForumComposite/Views/Shared/Layout/SideBar/NewPost.cshtml
+++ b/apps/ForumComposite/Views/Shared/Layout/SideBar/NewPost.cshtml
@@ -1,4 +1,6 @@
-﻿
+﻿@using Euclid.Composites.Mvc.Extensions
+@model ForumComposite.Models.PublishPostInputModel
+
 @if (Request.IsAuthenticated)
 {
 	<div class="well">
@@ -8,20 +10,44 @@
 		</div>
 	</div>
 }
+
 <div class="modal hide fade" style="display: none;" id="newPost-modal">
+	@using (Html.BeginFormForInputModel(Model, true, Url.RouteUrl("Home")))
+	{
+		<div class="modal-header">
+			<a href="#" class="close">&times;</a>
+			<h3>New Post</h3>
+		</div>
 
-	<div class="modal-header">
-		<a href="#" class="close">&times;</a>
-		<h3>New Post</h3>
-	</div>
+		<div class="modal-body">
+		
+			
+		 @Html.Hidden("ForumIdentifier", ForumIdentifier)
+		 @Html.Hidden("AuthorIdentifier", CurrentUserIdentifier)
 
-	<div class="modal-body">
-		@{ Html.RenderAction("Create", "Post"); }
-	</div>
+				<fieldset>
+					<div class="clearfix">
+						<label for="username">
+							Title</label>
+						<div class="input">
+							@Html.TextBoxFor(m => m.Title)
+						</div>
+					</div>
+					<div class="clearfix">
+						<label for="email">
+							Post</label>
+						<div class="input">
+							@Html.TextAreaFor(m => m.Body, 3, 6, new { @class ="x-large"})
+							<span class="help-block">Please be civil.</span>
+						</div>
+					</div>
+				</fieldset>
 
-	<div class="modal-footer">
-		<button class="btn primary">Publish Post</button>
-		<a href="#" class="btn secondary">Cancel</a>
-	</div>
+		</div>
 
+		<div class="modal-footer">
+			<button class="btn primary">Publish Post</button>
+			<a href="#" class="btn close">Cancel</a>
+		</div>
+	}
 </div>
