--- a/apps/ForumComposite/Views/Shared/PostTile.cshtml
+++ b/apps/ForumComposite/Views/Shared/PostTile.cshtml
@@ -49,8 +49,8 @@ else if (Page.Size.ToLower() == "Small".ToLower())
 			<img src="@Url.Content("~/Content/images/exclamation-white.png")" /><br />
 		</div>
 
-	<@header><a href="@Url.RouteUrl("Post", new { categorySlug = "my-category", postSlug = "post-title" })">{Post Title}</a></@header>
-	<p style="@text">@truncate("Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quis ante in ipsum pharetra tempus a vel mi. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Aenean aliquet magna eget lacus accumsan faucibus. Etiam varius tortor vitae ligula rutrum placerat auctor elit iaculis. Ut lectus justo.", textLength)
+	<@header><a href="@Url.RouteUrl("Post", new { categorySlug = "my-category", postSlug = "post-title" })">@Page.Post.Title</a></@header>
+	<p style="@text">@truncate(Page.Post.Body, textLength)
 		&mdash; <span style="text-align: right; font-size: smaller;"><em>12:59 PM 12/31/2011</em>
 							in <a href="@Url.RouteUrl("Category", new { categorySlug = "category" })" class="label">
 								 	Another Category</a></span></p>
@@ -64,8 +64,7 @@ else if (Page.Size.ToLower() == "Small".ToLower())
 else if (mode == "condensed")
 {
 	<text>
-		<p style="@text"><b><a href="@Url.RouteUrl("Post", new { categorySlug = "my-category", postSlug = "post-title" })">
-													{Post title}</a></b><br />
+		<p style="@text"><b><a href="@Url.RouteUrl("Post", new { categorySlug = "my-category", postSlug = "post-title" })">@Page.Post.Title</a></b><br />
 			A truncated post body. Etiam porta sem malesuada magna mollis euismod.<br />
 			<span style="font-size: smaller;"><em>Three hours ago</em> by <a href="@Url.RouteUrl("ProfileOverview", new { profileSlug = "user-profile-slug" })">
 																																			username</a> with <a href="@Url.RouteUrl("Post", new { categorySlug = "my-category", postSlug = "post-title" })#comments">33 comments.</a></span> </p>
