--- a/apps/ForumComposite/Views/Shared/PostTile.cshtml
+++ b/apps/ForumComposite/Views/Shared/PostTile.cshtml
@@ -65,7 +65,7 @@ else if (mode == "condensed")
 {
 	<text>
 		<p style="@text"><b><a href="@Url.RouteUrl("Post", new { categorySlug = "my-category", postSlug = "post-title" })">@Page.Post.Title</a></b><br />
-			A truncated post body. Etiam porta sem malesuada magna mollis euismod.<br />
+			@truncate(Page.Post.Body, textLength)<br />
 			<span style="font-size: smaller;"><em>Three hours ago</em> by <a href="@Url.RouteUrl("ProfileOverview", new { profileSlug = "user-profile-slug" })">
 																																			username</a> with <a href="@Url.RouteUrl("Post", new { categorySlug = "my-category", postSlug = "post-title" })#comments">33 comments.</a></span> </p>
 	</text>
