--- a/apps/ForumComposite/Views/Category/Detail.cshtml
+++ b/apps/ForumComposite/Views/Category/Detail.cshtml
@@ -16,11 +16,11 @@
 <div class="row">
 
 	<div class="span8">
-		@RenderPage("~/Views/Shared/PostTile.cshtml", new { Size = "Large" })
+		@RenderPage("~/Views/Shared/PostTile.cshtml", new { Size = "Large", Post = new ForumAgent.ReadModels.Post() { Title = "{Post Title}", Body = "Etiam porta sem malesuada magna mollis euismod. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quis ante in ipsum pharetra tempus a vel mi. Cum sociis." } })
 	</div>
 
 	<div class="span8">
-		@RenderPage("~/Views/Shared/PostTile.cshtml", new { Size = "Large" })
+		@RenderPage("~/Views/Shared/PostTile.cshtml", new { Size = "Large", Post = new ForumAgent.ReadModels.Post() { Title = "{Post Title}", Body = "Etiam porta sem malesuada magna mollis euismod. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quis ante in ipsum pharetra tempus a vel mi. Cum sociis." } })
 	</div>
 
 </div>
@@ -30,11 +30,11 @@
 <div class="row">
 
 	<div class="span8">
-		@RenderPage("~/Views/Shared/PostTile.cshtml", new { Size = "Large" })
+		@RenderPage("~/Views/Shared/PostTile.cshtml", new { Size = "Large", Post = new ForumAgent.ReadModels.Post() { Title = "{Post Title}", Body = "Etiam porta sem malesuada magna mollis euismod. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quis ante in ipsum pharetra tempus a vel mi. Cum sociis." } })
 	</div>
 
 	<div class="span8">
-		@RenderPage("~/Views/Shared/PostTile.cshtml", new { Size = "Large" })
+		@RenderPage("~/Views/Shared/PostTile.cshtml", new { Size = "Large", Post = new ForumAgent.ReadModels.Post() { Title = "{Post Title}", Body = "Etiam porta sem malesuada magna mollis euismod. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quis ante in ipsum pharetra tempus a vel mi. Cum sociis." } })
 	</div>
 
 </div>
@@ -44,19 +44,19 @@
 <div class="row">
 
 	<div class="span4">
-		@RenderPage("~/Views/Shared/PostTile.cshtml", new { Size = "Small" })
+		@RenderPage("~/Views/Shared/PostTile.cshtml", new { Size = "Small", Post = new ForumAgent.ReadModels.Post() { Title = "{Post Title}", Body = "Etiam porta sem malesuada magna mollis euismod. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quis ante in ipsum pharetra tempus a vel mi. Cum sociis." } })
 	</div>
 
 	<div class="span4">
-		@RenderPage("~/Views/Shared/PostTile.cshtml", new { Size = "Small" })
+		@RenderPage("~/Views/Shared/PostTile.cshtml", new { Size = "Small", Post = new ForumAgent.ReadModels.Post() { Title = "{Post Title}", Body = "Etiam porta sem malesuada magna mollis euismod. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quis ante in ipsum pharetra tempus a vel mi. Cum sociis." } })
 	</div>
 
 	<div class="span4">
-		@RenderPage("~/Views/Shared/PostTile.cshtml", new { Size = "Small" })
+		@RenderPage("~/Views/Shared/PostTile.cshtml", new { Size = "Small", Post = new ForumAgent.ReadModels.Post() { Title = "{Post Title}", Body = "Etiam porta sem malesuada magna mollis euismod. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quis ante in ipsum pharetra tempus a vel mi. Cum sociis." } })
 	</div>
 
 	<div class="span4">
-		@RenderPage("~/Views/Shared/PostTile.cshtml", new { Size = "Small" })
+		@RenderPage("~/Views/Shared/PostTile.cshtml", new { Size = "Small", Post = new ForumAgent.ReadModels.Post() { Title = "{Post Title}", Body = "Etiam porta sem malesuada magna mollis euismod. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quis ante in ipsum pharetra tempus a vel mi. Cum sociis." } })
 	</div>
 
 </div>
