--- a/apps/ForumComposite/Views/Tag/All.cshtml
+++ b/apps/ForumComposite/Views/Tag/All.cshtml
@@ -18,7 +18,7 @@
 		<p>A brief description of the tag.</p>
 		@for (var i = 1; i < 5; i++)
 		{
-			@RenderPage("~/Views/Shared/PostTile.cshtml", new { Size = "Medium", Mode = "Condensed" })
+			@RenderPage("~/Views/Shared/PostTile.cshtml", new { Size = "Medium", Mode = "Condensed", Post = new ForumAgent.ReadModels.Post() { Title = "{Post Title}", Body = "Etiam porta sem malesuada magna mollis euismod. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quis ante in ipsum pharetra tempus a vel mi. Cum sociis." }  })
 		}
 		<a href="#">View</a> 33 more posts.
 	</div>
@@ -28,7 +28,7 @@
 		<p>A brief description of the tag.</p>
 		@for (var i = 1; i < 5; i++)
 		{
-			@RenderPage("~/Views/Shared/PostTile.cshtml", new { Size = "Medium", Mode = "Condensed" })
+			@RenderPage("~/Views/Shared/PostTile.cshtml", new { Size = "Medium", Mode = "Condensed", Post = new ForumAgent.ReadModels.Post() { Title = "{Post Title}", Body = "Etiam porta sem malesuada magna mollis euismod. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quis ante in ipsum pharetra tempus a vel mi. Cum sociis." }  })
 		}
 		<a href="#">View</a> 33 more posts.
 	</div>
@@ -38,7 +38,7 @@
 		<p>A brief description of the tag.</p>
 		@for (var i = 1; i < 5; i++)
 		{
-			@RenderPage("~/Views/Shared/PostTile.cshtml", new { Size = "Medium", Mode = "Condensed" })
+			@RenderPage("~/Views/Shared/PostTile.cshtml", new { Size = "Medium", Mode = "Condensed", Post = new ForumAgent.ReadModels.Post() { Title = "{Post Title}", Body = "Etiam porta sem malesuada magna mollis euismod. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quis ante in ipsum pharetra tempus a vel mi. Cum sociis." }  })
 		}
 		<a href="#">View</a> 33 more posts.
 	</div>
@@ -54,7 +54,7 @@
 		<p style="font-size: smaller;">A brief description of the tag.</p>
 		@for (var i = 1; i < 3; i++)
 		{
-			@RenderPage("~/Views/Shared/PostTile.cshtml", new { Size = "Small", Mode = "Condensed" })
+			@RenderPage("~/Views/Shared/PostTile.cshtml", new { Size = "Small", Mode = "Condensed", Post = new ForumAgent.ReadModels.Post() { Title = "{Post Title}", Body = "Etiam porta sem malesuada magna mollis euismod. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quis ante in ipsum pharetra tempus a vel mi. Cum sociis." }  })
 		}
 		<a href="#">View</a> 33 more posts.
 	</div>
@@ -64,7 +64,7 @@
 		<p style="font-size: smaller;">A brief description of the tag.</p>
 		@for (var i = 1; i < 3; i++)
 		{
-			@RenderPage("~/Views/Shared/PostTile.cshtml", new { Size = "Small", Mode = "Condensed" })
+			@RenderPage("~/Views/Shared/PostTile.cshtml", new { Size = "Small", Mode = "Condensed", Post = new ForumAgent.ReadModels.Post() { Title = "{Post Title}", Body = "Etiam porta sem malesuada magna mollis euismod. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quis ante in ipsum pharetra tempus a vel mi. Cum sociis." }  })
 		}
 		<a href="#">View</a> 33 more posts.
 	</div>
@@ -74,7 +74,7 @@
 		<p style="font-size: smaller;">A brief description of the tag.</p>
 		@for (var i = 1; i < 3; i++)
 		{
-			@RenderPage("~/Views/Shared/PostTile.cshtml", new { Size = "Small", Mode = "Condensed" })
+			@RenderPage("~/Views/Shared/PostTile.cshtml", new { Size = "Small", Mode = "Condensed", Post = new ForumAgent.ReadModels.Post() { Title = "{Post Title}", Body = "Etiam porta sem malesuada magna mollis euismod. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quis ante in ipsum pharetra tempus a vel mi. Cum sociis." }  })
 		}
 		<a href="#">View</a> 33 more posts.
 	</div>
@@ -84,7 +84,7 @@
 		<p style="font-size: smaller;">A brief description of the tag.</p>
 		@for (var i = 1; i < 3; i++)
 		{
-			@RenderPage("~/Views/Shared/PostTile.cshtml", new { Size = "Small", Mode = "Condensed" })
+			@RenderPage("~/Views/Shared/PostTile.cshtml", new { Size = "Small", Mode = "Condensed", Post = new ForumAgent.ReadModels.Post() { Title = "{Post Title}", Body = "Etiam porta sem malesuada magna mollis euismod. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quis ante in ipsum pharetra tempus a vel mi. Cum sociis." }  })
 		}
 		<a href="#">View</a> 33 more posts.
 	</div>
