--- a/apps/ForumComposite/Views/Category/Detail.cshtml
+++ b/apps/ForumComposite/Views/Category/Detail.cshtml
@@ -1,6 +1,6 @@
 ﻿@model ForumComposite.ViewModels.Category.CategoryDetailsViewModel
 @{
-	ViewBag.Title = ForumName + " - {Category Name}";
+	ViewBag.Title = ForumName + " - " + Model.Name;
 	Layout = "~/Views/Shared/_ForumLayout.cshtml";
 	ViewBag.CategoriesClass = "active";
 }
@@ -13,55 +13,30 @@
 <hr />
 <p><small>(Custom category content.)</small></p>
 
-<div class="row">
+@{
+	var postCount = 0;
+}
 
-	<div class="span8">
-		@RenderPage("~/Views/Shared/PostTile.cshtml", new { Size = "Large", Post = new ForumAgent.ReadModels.Post() { Title = "{Post Title}", Body = "Etiam porta sem malesuada magna mollis euismod. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quis ante in ipsum pharetra tempus a vel mi. Cum sociis." } })
-	</div>
+@foreach(var post in Model.Listing.Posts){
 
-	<div class="span8">
-		@RenderPage("~/Views/Shared/PostTile.cshtml", new { Size = "Large", Post = new ForumAgent.ReadModels.Post() { Title = "{Post Title}", Body = "Etiam porta sem malesuada magna mollis euismod. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quis ante in ipsum pharetra tempus a vel mi. Cum sociis." } })
-	</div>
+	if (postCount % 4 == 0)
+		{
+			@:<div class="row">
+		}
 
-</div>
+			<div class="span4">
+				@RenderPage("~/Views/Shared/PostTile.cshtml", new { Size = "Small", Post = post })
+			</div>
 
-<hr>
+		if (postCount % 4 == 3)
+		{
+			@:</div><hr/>
+		}
 
-<div class="row">
-
-	<div class="span8">
-		@RenderPage("~/Views/Shared/PostTile.cshtml", new { Size = "Large", Post = new ForumAgent.ReadModels.Post() { Title = "{Post Title}", Body = "Etiam porta sem malesuada magna mollis euismod. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quis ante in ipsum pharetra tempus a vel mi. Cum sociis." } })
-	</div>
-
-	<div class="span8">
-		@RenderPage("~/Views/Shared/PostTile.cshtml", new { Size = "Large", Post = new ForumAgent.ReadModels.Post() { Title = "{Post Title}", Body = "Etiam porta sem malesuada magna mollis euismod. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quis ante in ipsum pharetra tempus a vel mi. Cum sociis." } })
-	</div>
-
-</div>
-
-<hr>
-
-<div class="row">
-
-	<div class="span4">
-		@RenderPage("~/Views/Shared/PostTile.cshtml", new { Size = "Small", Post = new ForumAgent.ReadModels.Post() { Title = "{Post Title}", Body = "Etiam porta sem malesuada magna mollis euismod. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quis ante in ipsum pharetra tempus a vel mi. Cum sociis." } })
-	</div>
-
-	<div class="span4">
-		@RenderPage("~/Views/Shared/PostTile.cshtml", new { Size = "Small", Post = new ForumAgent.ReadModels.Post() { Title = "{Post Title}", Body = "Etiam porta sem malesuada magna mollis euismod. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quis ante in ipsum pharetra tempus a vel mi. Cum sociis." } })
-	</div>
-
-	<div class="span4">
-		@RenderPage("~/Views/Shared/PostTile.cshtml", new { Size = "Small", Post = new ForumAgent.ReadModels.Post() { Title = "{Post Title}", Body = "Etiam porta sem malesuada magna mollis euismod. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quis ante in ipsum pharetra tempus a vel mi. Cum sociis." } })
-	</div>
-
-	<div class="span4">
-		@RenderPage("~/Views/Shared/PostTile.cshtml", new { Size = "Small", Post = new ForumAgent.ReadModels.Post() { Title = "{Post Title}", Body = "Etiam porta sem malesuada magna mollis euismod. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quis ante in ipsum pharetra tempus a vel mi. Cum sociis." } })
-	</div>
-
-</div>
-
-<hr />
+	{
+		postCount++;
+	}
+}
 
 <div class="pagination">
 	<ul>
