--- a/apps/ForumComposite/Views/Shared/Layout/SideBar/NewPost.cshtml
+++ b/apps/ForumComposite/Views/Shared/Layout/SideBar/NewPost.cshtml
@@ -12,7 +12,7 @@
 }
 
 <div class="modal hide fade" style="display: none;" id="newPost-modal">
-	@using (Html.BeginFormForInputModel(Model, true, Url.RouteUrl("Home")))
+	@using (Html.BeginFormForInputModel(Model))
 	{
 		<div class="modal-header">
 			<a href="#" class="close">&times;</a>
