--- a/apps/ForumComposite/Views/Post/Detail.cshtml
+++ b/apps/ForumComposite/Views/Post/Detail.cshtml
@@ -100,11 +100,11 @@
 
 			<div class="span6" style="text-align: right;">
 				<a href="#">
-					<img src="../../../Themes/default/images/arrow-090.png" /></a>&nbsp;&nbsp;&nbsp;
+					<img src="@Url.Content("~/Content/images/arrow-090.png")" /></a>&nbsp;&nbsp;&nbsp;
 				<a href="#">
-					<img src="../../../Themes/default/images/arrow-270.png" /></a>&nbsp;&nbsp;&nbsp;
+					<img src="@Url.Content("~/Content/images/arrow-270.png")" /></a>&nbsp;&nbsp;&nbsp;
 				<a href="#">
-					<img src="../../../Themes/default/images/exclamation-white.png" /></a>
+					<img src="@Url.Content("~/Content/images/exclamation-white.png")" /></a>
 			</div>
 
 		</div>
